--- a/apache.config
+++ b/apache.config
@@ -1,16 +1,16 @@
 # Example Apache Virtual Host Configuration
 
 <VirtualHost *:80>
-    ServerName example.com
-    ServerAlias www.example.com
-    DocumentRoot /var/www/html/example.com
+    ServerName myapp.epache.com
+    DocumentRoot /var/www/myapp
 
-    <Directory /var/www/html/example.com>
+    <Directory /var/www/myapp>
         Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
     </Directory>
 
-    ErrorLog ${APACHE_LOG_DIR}/example.com-error.log
-    CustomLog ${APACHE_LOG_DIR}/example.com-access.log combined
+    ErrorLog ${APACHE_LOG_DIR}/error.log
+    CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
+
